# langgraph-kit

./: .copier-testapp.yml  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING_ROADMAP.md  justfile  mkdocs.yml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/agents/: coverage-floor-guardian.md  warning-investigator.md
.claude/hooks/: block-protected-paths.py  ruff-on-edit.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  docs.yml  examples-nightly.yml  labeler.yml  pre-commit.yml  prompt-bench-nightly.yml  publish.yml  release.yml
docs/: index.md
docs/agents/: basic-deep-agent.md  builder-utilities.md  coding-agent.md  deep-agent.md  echo-agent.md  graph-builder.md  overview.md  r0-agent.md  reference-deep-agent.md
docs/api-reference/: public-api.md  sse-events.md  store-namespaces.md
docs/architecture/: design-principles.md  overview.md
docs/cli/: reference.md
docs/commands/: builtins.md  dispatcher.md  middleware.md  overview.md
docs/context-management/: compaction.md  continuation.md  overview.md  pressure.md
docs/core/: config.md  llm.md  observability.md  persistence.md  registry.md  streaming.md
docs/evals/: overview.md
docs/examples/: audit_log_and_query.md  context_compaction.md  dev_hot_reload.md  disaster_recovery_export_import.md  evals_rule_and_model_graded.md  fastapi_full_router_curl.md  fastapi_minimal_router.md  hitl_approval_flow.md  index.md  memory_consolidation.md  memory_save_recall.md  memory_semantic_search.md  observability_langfuse.md  orchestration_async_tasks.md  orchestration_workers.md  plugins_skill_discovery.md  prompt_assembly_sections.md  rate_limit_token_bucket.md  replay_record_and_play.md  security_injection_and_pii.md  tools_mcp_integration.md  tools_register_capability.md  tools_risk_levels_and_hitl.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/hitl/: models.md  overview.md  tools.md
docs/integrations/: fastapi.md
docs/memory/: agent-memory.md  consolidation.md  extraction.md  models.md  overview.md  persistent-manager.md  session-notebook.md  shared-memory.md
docs/orchestration/: async-tasks.md  coordinator.md  overview.md  queue.md  workers.md
docs/plugins/: mcp-adapter.md  overview.md  plugin-loader.md
docs/prompt-assembly/: composer.md  context-providers.md  overview.md  sections.md
docs/resilience/: completion-guard.md  empty-turn.md  graceful-shutdown.md  overview.md  post-run.md  structured-output.md  tool-error.md
docs/skills/: defining-skills.md  overview.md  registry.md
docs/tools/: capability.md  deferred-tools.md  memory-tools.md  overview.md  registry.md  worktree-tools.md
docs/ui-events/: artifacts.md  overview.md  progress-suggestions.md
docs/visualization/: live.md
examples/: README.md  __init__.py  _lib.py  _sample_mcp_server.py  _sample_plugin.py  audit_log_and_query.py  basic_deep_agent.py  context_compaction.py  dev_hot_reload.py  disaster_recovery_export_import.py  evals_rule_and_model_graded.py  fastapi_full_router_curl.md  fastapi_minimal_router.py  hitl_approval_flow.py  memory_consolidation.py  memory_save_recall.py  memory_semantic_search.py  observability_langfuse.py  orchestration_async_tasks.py  orchestration_workers.py  plugins_skill_discovery.py  prompt_assembly_sections.py  quickstart_echo.py  rate_limit_token_bucket.py  reference_deep_agent.py  replay_record_and_play.py  run_all.py  security_injection_and_pii.py  streaming_sse_events.py  tools_mcp_integration.py  tools_register_capability.py  tools_risk_levels_and_hitl.py
local_data/: .gitignore
scripts/: setup-testapp.sh
src/langgraph_kit/: __init__.py  _config.py  cancellation.py  cli.py  llm.py  models.py  observability.py  observability_metrics.py  persistence.py  pruning.py  registry.py  shell.py  streaming.py
tests/: conftest.py  test_agent_memory.py  test_agui_streaming.py  test_async_task_manager.py  test_async_tasks_fixes.py  test_audit_log.py  test_bind_kit_defaults.py  test_budget_persistence_wiring.py  test_cancellation.py  test_cli_generation.py  test_cli_openapi.py  test_coding_features.py  test_command_middleware.py  test_config.py  test_config_validation.py  test_consolidation.py  test_context_management.py  test_contrib_agui.py  test_contrib_fastapi.py  test_contrib_schedule.py  test_contrib_watchers.py  test_contrib_webhook.py  test_coordinator_mode.py  test_cost_callback.py  test_cost_model_prefix_and_loader.py  test_cost_models.py  test_data_lifecycle.py  test_dev_reloader.py  test_disaster_recovery.py  test_evals_ci_thresholds.py  test_evals_model_graded.py  test_evals_report.py  test_evals_rule_based.py  test_evals_runner.py  test_extraction.py  test_fastapi_helpers.py  test_fastapi_lifespan_validation.py  test_fastapi_thread_cancel.py  test_fastapi_thread_ownership.py  test_feature_quality_pass3.py  (+63 more)
tests/e2e/: FEATURE_INVENTORY.md  conftest.py  helpers.py  test_a2a_e2e.py  test_builder_streaming_e2e.py  test_builders_e2e.py  test_cli_scaffolder_e2e.py  test_commands_builtins_e2e.py  test_commands_e2e.py  test_deferred_tools_e2e.py  test_fastapi_e2e.py  test_graph_registration_e2e.py  test_infrastructure_smoke.py  test_invariants_e2e.py  test_middleware_completion_guard_e2e.py  test_middleware_extraction_e2e.py  test_middleware_ordering_e2e.py  test_middleware_pressure_e2e.py  test_middleware_queued_input_e2e.py  test_middleware_runtime_state_e2e.py  test_middleware_stack_e2e.py  test_plugins_e2e.py  test_plugins_edges_e2e.py  test_prompt_assembly_e2e.py  test_recursion_limit_e2e.py  test_replay_recorder_e2e.py  test_stop_hooks_edges_e2e.py  test_streaming_parity_e2e.py  test_supervisor_e2e.py  test_tool_error_retry_e2e.py  test_tools_async_e2e.py  test_tools_deferred_edges_e2e.py  test_tools_hitl_e2e.py  test_tools_memory_e2e.py  test_tools_retrieve_result_e2e.py  test_tools_search_memories_e2e.py  test_tools_skills_e2e.py  test_tools_ui_e2e.py
tests/prompt_bench/: .env.example  README.md  __init__.py  conftest.py  diff.py  live_runner.py  run.py  (+13 more)
(+201 files in other folders)
