[project]
name = "langgraph-kit"
version = "0.1.0"
description = "Reusable LangGraph agent toolkit with memory, tools, and orchestration"
license = "AGPL-3.0-or-later"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
requires-python = "==3.13.*"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "deepagents>=0.4",
    "langfuse>=4.0",
    "langchain-mcp-adapters>=0.2",
    "structlog>=24.0",
]

[project.urls]
Repository = "https://github.com/allada-homelab/langgraph-kit"

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
anthropic = ["langchain-anthropic>=0.3"]
google = ["langchain-google-genai>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "coverage>=7.0", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_kit"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "FA",     # flake8-future-annotations
    "TC",     # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "T20",    # flake8-print
]
ignore = [
    "E501",   # line-too-long (formatter handles)
    "B008",   # function calls in defaults (FastAPI Depends pattern)
    "RET504", # unnecessary assignment before return (readability)
]

[tool.ruff.lint.per-file-ignores]
"src/langgraph_kit/**/*.py" = ["TC001"]

[tool.ruff.lint.isort]
known-first-party = ["langgraph_kit"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
