[project]
name = "langgraph-kit"
description = "Reusable LangGraph agent toolkit with memory, tools, and orchestration"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "David Allada", email = "davidanilallada@gmail.com" }]
requires-python = ">=3.11,<3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/allada-homelab/langgraph-kit"
Source = "https://github.com/allada-homelab/langgraph-kit"
Issues = "https://github.com/allada-homelab/langgraph-kit/issues"

[project.optional-dependencies]
postgres = ["langgraph-checkpoint-postgres>=2.0"]
openai = ["langchain-openai>=0.3"]
anthropic = ["langchain-anthropic>=0.3"]
google = ["langchain-google-genai>=2.0"]
deepagents = ["deepagents>=0.4"]
langfuse = ["langfuse>=4.0"]
mcp = ["langchain-mcp-adapters>=0.2"]
mcp-server = ["mcp>=1.0"]
fastapi = ["fastapi>=0.100"]
agui = ["ag-ui-protocol>=0.1"]
a2a = ["a2a-sdk>=0.2"]
all = [
    "langgraph-kit[postgres,openai,anthropic,google,deepagents,langfuse,mcp,mcp-server,fastapi,agui,a2a]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/langgraph_kit/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_kit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/langgraph_kit",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "tests",
    "testapp",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "type" },
    "langgraph-kit[all]",
    "pre-commit>=4",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "coverage[toml]>=7",
]
lint = [
    "ruff>=0.11",
    "codespell>=2.3",
]
type = [
    "basedpyright>=1.20",
]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=1.0.4",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "FA",     # flake8-future-annotations
    "TC",     # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "T20",    # flake8-print
]
ignore = [
    "E501",   # line-too-long (formatter handles)
    "B008",   # function calls in defaults (FastAPI Depends pattern)
    "RET504", # unnecessary assignment before return (readability)
]

[tool.ruff.lint.per-file-ignores]
"src/langgraph_kit/**/*.py" = ["TC001"]
"tests/**/*.py" = ["S101", "S106", "S311", "ARG", "B011", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["langgraph_kit"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib --strict-markers --strict-config -ra"
filterwarnings = [
    "error",
]
xfail_strict = true
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration (requires external services)",
]

[tool.coverage.run]
source = ["src/langgraph_kit"]
omit = [
    "*/__version__.py",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
# Starting floor — current actual is ~60%. Leave 2-3 points of headroom so
# routine changes that temporarily dip coverage (e.g. adding a new stub)
# don't block CI. Raise this as the suite grows.
fail_under = 55

[tool.coverage.html]
show_contexts = true
