[project]
name = "langgraph-kit"
description = "Reusable LangGraph agent toolkit with memory, tools, and orchestration"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "David Allada", email = "davidanilallada@gmail.com" }]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-core>=1.3.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/allada-homelab/langgraph-kit"
Source = "https://github.com/allada-homelab/langgraph-kit"
Issues = "https://github.com/allada-homelab/langgraph-kit/issues"

[project.optional-dependencies]
postgres = ["langgraph-checkpoint-postgres>=3.0.5"]
openai = ["langchain-openai>=1.2.0"]
anthropic = ["langchain-anthropic>=1.4.1"]
google = ["langchain-google-genai>=4.2.2"]
deepagents = ["deepagents>=0.5.3"]
langfuse = ["langfuse>=4.5"]
mcp = ["langchain-mcp-adapters>=0.2.2"]
mcp-server = ["mcp>=1.27"]
fastapi = ["fastapi>=0.136"]
agui = ["ag-ui-protocol>=0.1.18"]
all = [
    "langgraph-kit[postgres,openai,anthropic,google,deepagents,langfuse,mcp,mcp-server,fastapi,agui]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/langgraph_kit/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_kit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/langgraph_kit",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "tests",
    "testapp",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "type" },
    "langgraph-kit[all]",
    "pre-commit>=4.6",
]
test = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7",
    "coverage[toml]>=7.13",
]
lint = [
    "ruff>=0.15",
    "codespell>=2.4",
]
type = [
    "basedpyright>=1.39",
]
docs = [
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=1.0.4",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "FA",     # flake8-future-annotations
    "TC",     # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "T20",    # flake8-print
]
ignore = [
    "E501",   # line-too-long (formatter handles)
    "B008",   # function calls in defaults (FastAPI Depends pattern)
    "RET504", # unnecessary assignment before return (readability)
]

[tool.ruff.lint.per-file-ignores]
"src/langgraph_kit/**/*.py" = ["TC001"]
"tests/**/*.py" = ["S101", "S106", "S311", "ARG", "B011", "E501"]
# Examples write to stdout to show output (T20 print is intentional),
# use scripted secrets in plain text (S106), and may keep unused args
# in callbacks/handlers for clarity (ARG). assert is used for narrative
# checks rather than exception flow (S101).
"examples/**/*.py" = ["T20", "S101", "S106", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["langgraph_kit"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# ``-p no:unraisableexception`` disables pytest's plugin that re-raises
# ResourceWarnings collected during the GC sweep at session teardown.
# Third-party HTTP-client singletons (langfuse, langsmith, langgraph
# default httpx clients) leak sockets at session exit on Python 3.13;
# the plugin elevates those to a session-level error, flipping the exit
# code to 1 even though every test passes. We don't control those
# singletons and the leaks don't affect correctness — disable the
# plugin so CI can rely on the actual test outcome. Resource leaks in
# our own code surface as ResourceWarnings during the test (still
# captured by ``filterwarnings = ["error"]`` below), so we only lose
# visibility into the third-party noise.
addopts = "--import-mode=importlib --strict-markers --strict-config -ra -p no:unraisableexception"
filterwarnings = [
    "error",
]
xfail_strict = true
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration (requires external services)",
    "e2e: end-to-end test — runs a real compiled graph with a scripted LLM",
    "prompt_bench: prompt-optimization bench scenario (real LLM when PROMPT_BENCH_LLM=real)",
]

[tool.coverage.run]
source = ["src/langgraph_kit"]
omit = [
    "*/__version__.py",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
# Starting floor — current actual is ~60%. Leave 2-3 points of headroom so
# routine changes that temporarily dip coverage (e.g. adding a new stub)
# don't block CI. Raise this as the suite grows.
fail_under = 55

[tool.coverage.html]
show_contexts = true

[tool.codespell]
# False-positives from test assertions that use partial-string matches
# (e.g. `"sav" in content` to match both "save" and "saved").
# ``asend`` and ``acount`` are real async method names on
# ``AgentMailbox``; codespell wants them to be ``ascend``/``account``.
ignore-words-list = "sav,memor,asend,acount"
